--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,9 +4,9 @@ use_frameworks!
 use_modular_headers!
 
 target 'Audiobooks' do
-  project 'ios/Audiobooks.xcodeproj'
+  project 'Audiobooks.xcodeproj'
 
-  pod 'Alamofire', '~> 5.6'
-  pod 'SwiftyJSON', '~> 5.0'
-  pod 'SDWebImage', '~> 5.0'
+  # Зависимости (пример)
+  pod 'Alamofire'
+  pod 'Kingfisher'
 end
