--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,12 +1,12 @@
-platform :ios, '13.0'
-
-use_frameworks!
-use_modular_headers!
+platform :ios, '16.0'
 
 target 'Audiobooks' do
-  project 'Audiobooks.xcodeproj'
+  use_frameworks!
+  use_modular_headers!
 
-  # Зависимости (пример)
-  pod 'Alamofire'
-  pod 'Kingfisher'
+  pod 'FirebaseCore'
+  pod 'FirebaseAuth'
+  pod 'FirebaseFirestore'
 end
+
+project 'Audiobooks.xcodeproj'
