--- a/ios/Info.plist
+++ b/ios/Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
     <key>CFBundleName</key>
-    <string>Audiobooks</string>
+    <string>Аудиокниги</string>
     <key>CFBundleIdentifier</key>
-    <string>com.serhiitkachuk.Audiobooks</string>
+    <string>com.yourteam.audiobooks</string>
     <key>UIBackgroundModes</key>
     <array>
       <string>audio</string>
