--- a/ios/Info.plist
+++ b/ios/Info.plist
@@ -2,16 +2,16 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>CFBundleName</key>
-    <string>Аудиокниги</string>
-    <key>CFBundleIdentifier</key>
-    <string>com.yourteam.audiobooks</string>
-    <key>UIBackgroundModes</key>
-    <array>
-      <string>audio</string>
-      <string>fetch</string>
-    </array>
-    <key>NSAppleMusicUsageDescription</key>
-    <string>Приложение использует медиатеку для воспроизведения аудио-файлов.</string>
+  <key>CFBundleName</key>
+  <string>Аудиокниги</string>
+  <key>CFBundleIdentifier</key>
+  <string>com.example.audiobooks</string>
+  <key>UIBackgroundModes</key>
+  <array>
+    <string>audio</string>
+    <string>fetch</string>
+  </array>
+  <key>NSAppleMusicUsageDescription</key>
+  <string>Приложение использует медиатеку для воспроизведения аудио-файлов.</string>
 </dict>
 </plist>
