--- a/ios/export_options.plist
+++ b/ios/export_options.plist
@@ -4,11 +4,13 @@
 <dict>
   <key>method</key>
   <string>app-store</string>
-  <key>teamID</key>
-  <string>CW6VS28729</string>
   <key>uploadSymbols</key>
   <true/>
   <key>compileBitcode</key>
   <false/>
+  <key>signingStyle</key>
+  <string>automatic</string>
+  <key>stripSwiftSymbols</key>
+  <true/>
 </dict>
 </plist>
