--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,11 +1,9 @@
 platform :ios, '16.0'
-
 use_frameworks!
 use_modular_headers!
 
 target 'Audiobooks' do
   project 'Audiobooks.xcodeproj'
-  pod 'FirebaseCore'
-  pod 'FirebaseAuth'
-  pod 'FirebaseStorage'
+  pod 'Alamofire', '~> 5.7'
+  pod 'SDWebImage', '~> 5.0'
 end
