--- a/ios/export_options.plist
+++ b/ios/export_options.plist
@@ -7,7 +7,7 @@
     <key>teamID</key>
     <string>CW6VS28729</string>
     <key>signingStyle</key>
-    <string>manual</string>
+    <string>automatic</string>
     <key>uploadSymbols</key>
     <true/>
     <key>compileBitcode</key>
