--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,6 +5,11 @@ workflows:
       xcode: 16.4
     integrations:
       app_store_connect: integration
+
+    ios_signing:
+      distribution_type: app_store
+      bundle_identifier: com.serhiitkachuk.Audiobooks
+
     scripts:
       - name: Set up code signing
         script: |
@@ -15,14 +20,17 @@ workflows:
             --create
           keychain add-certificates
           xcode-project use-profiles
+
       - name: Build app for release
         script: |
           xcode-project build-ipa \
             --project ios/Audiobooks.xcodeproj \
             --scheme Audiobooks \
             --export-options-plist ios/export_options.plist
+
     artifacts:
       - build/ios/ipa/*.ipa
+
     publishing:
       app_store_connect:
         auth: integration
