--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -21,8 +21,9 @@ workflows:
           xcodebuild archive \
             -project Audiobooks.xcodeproj \
             -scheme Audiobooks \
+            -sdk iphoneos \
+            -destination 'generic/platform=iPhoneOS' \
             -configuration Release \
-            -destination 'generic/platform=iOS' \
             -allowProvisioningUpdates \
             -archivePath ../build/ios/xcarchive/Audiobooks.xcarchive \
             DEVELOPMENT_TEAM=CW6VS28729 \
