--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -10,6 +10,17 @@ workflows:
         script: |
           rm -rf ~/Library/Developer/Xcode/DerivedData
           rm -rf build
+
+      - name: Set up signing
+        script: |
+          keychain initialize
+          app-store-connect fetch-signing-files \
+            --type IOS_APP_STORE \
+            --bundle-id com.serhiitkachuk.Audiobooks \
+            --create
+          keychain add-certificates
+          xcode-project use-profiles
+
       - name: Build app for release
         script: |
           xcodebuild \
@@ -20,7 +31,6 @@ workflows:
             -archivePath build/ios/xcarchive/Audiobooks.xcarchive \
             DEVELOPMENT_TEAM=CW6VS28729 \
             CODE_SIGN_STYLE=Manual \
-            PROVISIONING_PROFILE_SPECIFIER="audiobooks_appstore_profile" \
             -allowProvisioningUpdates \
             archive
 
@@ -29,6 +39,7 @@ workflows:
             -archivePath build/ios/xcarchive/Audiobooks.xcarchive \
             -exportOptionsPlist ios/export_options.plist \
             -exportPath build/ios/ipa
+
     artifacts:
       - build/ios/ipa/*.ipa
     publishing:
